src/objects/Related_Issue__c.object
<CustomObject>
    <fields>
        <fullName>Investigation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Investigation</label>
        <referenceTo>Investigation__c</referenceTo>
        <relationshipLabel>Related Issues</relationshipLabel>
        <relationshipName>Related_Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Issue__c</fullName>
        <label>Issue</label>
        <referenceTo>Issue__c</referenceTo>
        <relationshipLabel>Related Issues</relationshipLabel>
        <relationshipName>Related_Issues</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Litigation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Litigation</label>
        <referenceTo>Litigation__c</referenceTo>
        <relationshipLabel>Related Issues</relationshipLabel>
        <relationshipName>Related_Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Petition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Petition</label>
        <referenceTo>Petition__c</referenceTo>
        <relationshipLabel>Related Issues</relationshipLabel>
        <relationshipName>Related_Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Segment</label>
        <referenceTo>Segment__c</referenceTo>
        <relationshipLabel>Related Issues</relationshipLabel>
        <relationshipName>Related_Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Related Issue</label>
    <nameField>
        <displayFormat>RI-{0000}</displayFormat>
        <label>Related Issue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Issues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>